--- a/index.html
+++ b/index.html
@@ -56,16 +56,9 @@
   <div class="row" style="margin-top:8px">
     <div class="ctl"><label>抽出期間（開始, カレンダー）</label><input id="dateStart" type="date"></div>
     <div class="ctl"><label>抽出期間（終了, カレンダー）</label><input id="dateEnd" type="date"></div>
-
-    <!-- 既定値を最初から注入（あなたのWorkers） -->
-    <div class="ctl" style="min-width:260px"><label>（任意）CORS プロキシ（Ethplorer/Gecko 用）</label>
-      <input id="cors" value="https://cors-proxy.anchobi975.workers.dev/?url=">
-    </div>
-    <div class="ctl" style="min-width:260px"><label>（推奨）Trends API（あなたの /series のURL）</label>
-      <input id="trApi" value="https://cors-trends.anchobi975.workers.dev/series">
-    </div>
+    <div class="ctl" style="min-width:280px"><label>（任意）CORS プロキシ（Ethplorer/Gecko 用）</label><input id="cors" placeholder="https://cors-proxy.anchobi975.workers.dev/?url="></div>
+    <div class="ctl" style="min-width:280px"><label>（推奨）Trends API（Workers /series のURL）</label><input id="trApi" placeholder="https://cors-trends.anchobi975.workers.dev/series"></div>
     <div class="ctl" style="min-width:220px"><label>（任意）Ethplorer API key</label><input id="ethKey" placeholder="未入力なら freekey を使用"></div>
-
     <div class="ctl">
       <label>&nbsp;</label>
       <div style="display:flex;gap:8px">
@@ -140,15 +133,12 @@ const jitter=(a=120,b=420)=>Math.floor(Math.random()*(b-a+1))+a;
 const normTs=t=> (t>1e12?Math.floor(t/1000):t);
 function log(m,e=false){const L=by('notes');const line=`[${new Date().toLocaleTimeString()}] ${m}`;L.innerHTML+=e?`<div class="err">${line}</div>`:`<div>${line}</div>`;L.scrollTop=L.scrollHeight;}
 function setBar(f){by('pbar').style.width=`${Math.max(0,Math.min(1,f))*100}%`;}
-const pad2=n=>String(n).padStart(2,'0');
-const ymdUTC=ts=>{const d=new Date(ts*1000);return `${d.getUTCFullYear()}-${pad2(d.getUTCMonth()+1)}-${pad2(d.getUTCDate())}`;};
 
-/* ============ 既定値の最終確認 ============ */
-(function ensureDefaults(){
-  const cors=by('cors'); const tr=by('trApi');
-  if(!cors.value) cors.value='https://cors-proxy.anchobi975.workers.dev/?url=';
-  if(!tr.value) tr.value='https://cors-trends.anchobi975.workers.dev/series';
-})();
+// デフォルト値を最初から入れる
+document.addEventListener('DOMContentLoaded', ()=>{
+  if(!by('cors').value) by('cors').value = 'https://cors-proxy.anchobi975.workers.dev/?url=';
+  if(!by('trApi').value) by('trApi').value = 'https://cors-trends.anchobi975.workers.dev/series';
+});
 
 /* ============ Fetch helper（CORS ルーティング） ============ */
 function buildProxiedUrl(base,url){
@@ -179,6 +169,7 @@ function dl(name,text){const blob=new Blob([text],{type:'text/csv'});const a=doc
 function dateToStartUnix(s){if(!s)return null;const d=new Date(s+'T00:00:00');return Math.floor(d.getTime()/1000);}
 function dateToEndUnix(s){if(!s)return null;const d=new Date(s+'T23:59:59');return Math.floor(d.getTime()/1000)+1;}
 function datePrefToUnix(){let s=dateToStartUnix(by('dateStart').value);let e=dateToEndUnix(by('dateEnd').value);if(by('startTs').value)s=+by('startTs').value;if(by('endTs').value)e=+by('endTs').value;return {startTs:s,endTs:e};}
+function fmtYmdUTC(ts){const d=new Date(ts*1000);const y=d.getUTCFullYear();const m=String(d.getUTCMonth()+1).padStart(2,'0');const da=String(d.getUTCDate()).padStart(2,'0');return `${y}-${m}-${da}`}
 
 /* ============ レート制御 ============ */
 let lastEth=0,lastGecko=0,geckoPenalty=0;
@@ -315,128 +306,83 @@ function estimateLP(hs=[]){
 }
 
 /* ============ Google Trends ============ */
-/* 1) まずあなたの /series ワーカーを叩く → 2) 失敗時のみ Google 直（ロケール/geo/kwフォールバック） */
+/* 1st: /series Worker を試す → 2nd: 直叩き (proxy 経由) の簡潔フォールバック */
 function stripXSSI(s){ return typeof s==='string' && s.startsWith(")]}',") ? s.slice(5) : s; }
 
-/* ---- 直取り用（Explore → widget → Multiline） ---- */
-function trendsExploreReq({kw,geo,time,hl='ja',tz=0}){
-  const req={comparisonItem:[{keyword:kw,geo:geo||'',time}],category:0,property:''};
-  return `https://trends.google.com/trends/api/explore?hl=${encodeURIComponent(hl)}&tz=${tz}&req=${encodeURIComponent(JSON.stringify(req))}`;
-}
-function pickTimelineWidget(exp){
-  const ws = exp?.widgets || [];
-  // 取りこぼし防止：id/type のいずれかに候補語を含むものを優先
-  const want = w=>{
-    const id=(w?.id||'').toString().toUpperCase();
-    const tp=(w?.type||'').toString().toUpperCase();
-    return /TIMESERIES|TIMELINE|MULTILINE/.test(id) || /TIMESERIES|TIMELINE|MULTILINE/.test(tp);
+async function getTrendsSeries({kw,geo,startTs,endTs,hl='ja',tz=0}){
+  const trBase = (by('trApi').value||'').trim();
+  const start = fmtYmdUTC(startTs), end = fmtYmdUTC(endTs-1);
+
+  // --- 1) /series Worker 優先 ---
+  if(trBase){
+    try{
+      if(/\/series(?=$|\?)/.test(trBase)){ // /series の場合
+        const sep = trBase.includes('?')?'&':'?';
+        const url = `${trBase}${sep}kw=${encodeURIComponent(kw)}&geo=${encodeURIComponent(geo||'')}&hl=${encodeURIComponent(hl)}&start=${start}&end=${end}&tz=${tz}`;
+        const j = await _fetchJson(url,{label:`Series(worker)`});
+        const pts = (j?.points||[]).map(p=>({ts:Math.floor(+p.ts/1000),v:+p.value||0}));
+        if(pts.length) return pts;
+        throw new Error('empty series');
+      }else if(/\?url=/.test(trBase)){
+        // trBase が ?url= 型だったら、直叩きフォールバックへ流す
+      }else{
+        // 想定外フォーマットは無視して直叩きへ
+      }
+    }catch(e){
+      log(`Series(worker) failed: ${e.message||e}`,true);
+    }
+  }
+
+  // --- 2) 直叩き（proxy 経由で explore→widgetdata）---
+  const req={
+    comparisonItem:[{keyword:kw,geo:geo||'',time:`${start} ${end}`}],
+    category:0, property:''
   };
-  return ws.find(w=>want(w)) || null;
-}
-async function getTrendsDirect({kw,geo,startTs,endTs,hl='ja',tz=0}){
-  const s=ymdUTC(startTs), e=ymdUTC(endTs-1);
-  const time=`${s} ${e}`;
+  const exUrl=`https://trends.google.com/trends/api/explore?hl=${encodeURIComponent(hl)}&tz=${tz}&req=${encodeURIComponent(JSON.stringify(req))}`;
+
+  // 汎用プロキシ（CORS欄）も使い回し
+  const proxies=[by('cors').value.trim()||'', 'https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];
+  let explore=null, lastErr=null;
 
   // explore
-  const exUrl=trendsExploreReq({kw,geo,time,hl,tz});
-  const exRaw=await getJsonSmart(exUrl,{label:`Trends explore ${kw} (${hl}/${geo||'GL'})`}).catch(async e=>{
-    // プロキシ差し替えの再試行
-    const user=by('cors').value.trim();
-    const proxies=[user||'','https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];
-    let last=e;
-    for(const b of proxies){
-      try{
-        const r=await fetch(buildProxiedUrl(b,exUrl));
-        const t=await r.text();
-        return JSON.parse(stripXSSI(t));
-      }catch(err){ last=err; }
-    }
-    throw last;
-  });
-  const explore=exRaw?.widgets?exRaw:JSON.parse(stripXSSI(exRaw));
-  const widget=pickTimelineWidget(explore);
-  if(!widget) throw new Error('Load failed');
+  for(const b of proxies){
+    try{
+      const u=buildProxiedUrl(b,exUrl);
+      const r=await fetch(u); const t=await r.text();
+      explore=JSON.parse(stripXSSI(t));
+      break;
+    }catch(e){ lastErr=e; }
+  }
+  if(!explore){ throw lastErr||new Error('explore failed'); }
 
-  const req=encodeURIComponent(JSON.stringify(widget.request));
+  const widget=(explore.widgets||[]).find(w=>w?.id?.toUpperCase().includes('TIMESERIES'));
+  if(!widget){ throw new Error('TIMESERIES widget not found'); }
+
+  const req2=encodeURIComponent(JSON.stringify(widget.request));
   const token=encodeURIComponent(widget.token);
-  const mlUrl=`https://trends.google.com/trends/api/widgetdata/multiline?hl=${encodeURIComponent(hl)}&tz=${tz}&req=${req}&token=${token}`;
+  const dataUrl=`https://trends.google.com/trends/api/widgetdata/multiline?hl=${encodeURIComponent(hl)}&tz=${tz}&req=${req2}&token=${token}`;
 
   // data
-  const dataRaw=await getJsonSmart(mlUrl,{label:`Trends data ${kw} (${hl}/${geo||'GL'})`}).catch(async e=>{
-    const user=by('cors').value.trim();
-    const proxies=[user||'','https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];
-    let last=e;
-    for(const b of proxies){
-      try{
-        const r=await fetch(buildProxiedUrl(b,mlUrl)); const t=await r.text();
-        return JSON.parse(stripXSSI(t));
-      }catch(err){ last=err; }
-    }
-    throw last;
-  });
-
-  const series=((dataRaw?.default?.timelineData)||[]).map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
-  if(!series.length) throw new Error('Load failed');
-  return series;
-}
-
-/* ---- 総合（Worker優先 + フォールバック） ---- */
-async function getTrendsSeriesSmart({kw,geo,startTs,endTs}){
-  const trBase=(by('trApi')?.value||'').trim().replace(/\/+$/,'');
-  const s=ymdUTC(startTs), e=ymdUTC(endTs-1);
-  const kwCandidates = Array.from(new Set([kw, kw.replace(/\s+crypto\b/i,'')].filter(Boolean)));
-  const localePlan = [
-    {hl:'ja', geo},           // ja/指定geo
-    {hl:'en-US', geo},        // en/指定geo
-    {hl:'ja', geo:''},        // ja/GL
-    {hl:'en-US', geo:''},     // en/GL
-  ];
-
-  // 1) あなたの Worker (/series) を最優先（キーワード候補も順番に試す）
-  if(trBase){
-    for(const kw1 of kwCandidates){
-      try{
-        const url=`${trBase}/?kw=${encodeURIComponent(kw1)}&geo=${encodeURIComponent(geo||'')}&hl=ja&start=${s}&end=${e}&tz=0`;
-        const j=await _fetchJson(url,{label:'Series(worker)',timeout:16000});
-        const pts = Array.isArray(j?.points) ? j.points : (j?.data?.default?.timelineData ? j.data.default.timelineData.map(d=>({ts:+d.time*1000,value:+(d.value?.[0]??0)})) : []);
-        if(pts && pts.length){
-          return pts.map(p=>({ts:Math.floor((p.ts||0)/1000), v:+(p.value??0)}));
-        }
-        // 500や構造不一致はフォールバックへ
-      }catch(e){ log(`Series(worker) failed: ${e.message||e}`, true); }
-    }
+  let data=null;
+  for(const b of proxies){
+    try{
+      const u=buildProxiedUrl(b,dataUrl);
+      const r=await fetch(u); const t=await r.text();
+      data=JSON.parse(stripXSSI(t)); break;
+    }catch(e){ lastErr=e; }
   }
+  if(!data) throw lastErr||new Error('data failed');
 
-  // 2) 直取得（ロケール×geo の総当たり）
-  for(const kw1 of kwCandidates){
-    for(const loc of localePlan){
-      try{
-        const arr=await getTrendsDirect({kw:kw1,geo:loc.geo,hl:loc.hl,startTs,endTs,tz:0});
-        if(arr?.length) return arr;
-      }catch(e){
-        // ログは短く
-        log(`Trends: ${kw1} (${loc.hl}/${loc.geo||'GL'}) Load failed`, true);
-      }
-      await sleep(250); // 連続アクセスの肩叩き
-    }
-  }
-  throw new Error('all attempts failed');
+  return ((data?.default?.timelineData)||[]).map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
 }
 
 function seriesToMapDaily(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.v); } return m;}
 function ohlcToMapClose(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.c); } return m;}
 function toReturns(vals){const out=[]; for(let i=1;i<vals.length;i++){ const a=vals[i-1], b=vals[i]; if(a>0 && b>0){ out.push((b/a-1)*100); } } return out;}
-function alignAndLag(xArr,yArr,lag){
-  const n=Math.min(xArr.length, yArr.length);
-  const xs=[], ys=[];
-  if(lag===0){
-    for(let i=0;i<n;i++){ if(Number.isFinite(xArr[i])&&Number.isFinite(yArr[i])){ xs.push(xArr[i]); ys.push(yArr[i]); } }
-  }else if(lag>0){
-    for(let i=lag;i<n;i++){ const xi=xArr[i], yi=yArr[i-lag]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} }
-  }else{
-    const L=-lag;
-    for(let i=L;i<n;i++){ const xi=xArr[i-L], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} }
-  }
+function alignAndLag(xArr,yArr,lag){ const n=Math.min(xArr.length, yArr.length); const xs=[], ys=[];
+  if(lag===0){ for(let i=0;i<n;i++){ if(Number.isFinite(xArr[i])&&Number.isFinite(yArr[i])){ xs.push(xArr[i]); ys.push(yArr[i]); } } }
+  else if(lag>0){ for(let i=lag;i<n;i++){ const xi=xArr[i], yi=yArr[i-lag]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} } }
+  else{ const L=-lag; for(let i=L;i<n;i++){ const xi=xArr[i-L], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} } }
   return {xs,ys};
 }
 function pearson(xs,ys){
@@ -448,8 +394,7 @@ function pearson(xs,ys){
 }
 
 /* ============ Main ============ */
-let LAST_ROWS=[]; let CANCEL=false; let CACHE_OHLCV=new Map();
-
+let LAST_ROWS=[]; let CANCEL=false; let CACHE_OHLCV=new Map(); // poolAddr -> candles
 async function run(){
   CANCEL=false; by('cancelBtn').disabled=false;
   by('csvBtn').disabled=true; by('corrBtn').disabled=true; by('wrapTable').innerHTML=''; by('notes').innerHTML='';
@@ -490,7 +435,7 @@ async function run(){
 
       let candles=[];
       try{
-        candles=await getDailyOHLCV_eth_pool(s.poolAddress,{limit:ohlcvLimit});
+        candles=await getDailyOHLCV_eth_pool(s.poolAddress,{limit:ohlcLimit});
         CACHE_OHLCV.set(s.poolAddress, candles);
         ohlcvOk++;
         log(`ローソク本数: ${candles.length}｜最古: ${candles[0]?ts2(candles[0].ts):'-'}｜最新: ${candles[candles.length-1]?ts2(candles[candles.length-1].ts):'-'}`);
@@ -519,7 +464,7 @@ async function run(){
         if(lpRequired && !(lpInfo.lp_pct_est!=null && lpInfo.lp_pct_est>=lpmin)){ passes=false; reason.push('lp'); }
       }
 
-      // トレンドの既定キーワード
+      // デフォルトのキーワード（ベースシンボル。曖昧回避で "SYMBOL crypto" も付与）
       const baseSym = (s.baseSymbol || (s.name||'').split('/')[0] || '').trim();
       const trendKw = baseSym ? `${baseSym} crypto` : '';
 
@@ -566,17 +511,19 @@ async function runCorrelation(){
     try{
       const candles=CACHE_OHLCV.get(r.address)||[];
       const priceMap=ohlcToMapClose(candles);
+      // 日付配列（スキャン期間と重なる部分）
       const dates=[]; for(let t=startTs;t<endTs;t+=86400){ const d=new Date(t*1000); dates.push(`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`); }
 
-      // ★改：Worker優先 + 直取りフォールバック + キーワード/ロケール切替
-      const trSeries=await getTrendsSeriesSmart({kw:r.trend_kw,geo,startTs,endTs});
+      const trSeries=await getTrendsSeries({kw:r.trend_kw,geo,startTs,endTs,hl:'ja',tz:0});
       const trendMap=seriesToMapDaily(trSeries);
 
       let px=[], tv=[];
       for(const d of dates){ const p=priceMap.get(d), v=trendMap.get(d); px.push(Number.isFinite(p)?p:NaN); tv.push(Number.isFinite(v)?v:NaN); }
+      // 欠損埋め：前日値を持ち越し
       for(let i=1;i<px.length;i++){ if(!Number.isFinite(px[i])&&Number.isFinite(px[i-1])) px[i]=px[i-1]; }
       for(let i=1;i<tv.length;i++){ if(!Number.isFinite(tv[i])&&Number.isFinite(tv[i-1])) tv[i]=tv[i-1]; }
 
+      // 変換
       if(mode==='ret'){
         const pxr=toReturns(px.filter(x=>Number.isFinite(x)));
         const tvr=toReturns(tv.filter(x=>Number.isFinite(x)));
@@ -586,6 +533,7 @@ async function runCorrelation(){
         tv=tv.filter(x=>Number.isFinite(x));
       }
 
+      // ラグ探索
       let bestR=null, bestLag=0, r0=null;
       for(let lag=-L; lag<=L; lag++){
         const {xs,ys}=alignAndLag(px,tv,lag);
@@ -605,7 +553,6 @@ async function runCorrelation(){
     }catch(e){
       log(`Trends取得失敗: ${r.trend_kw}｜${e.message||e}`,true);
     }
-    await sleep(180); // 軽い肩叩き
   }
   render(LAST_ROWS,{strict:by('strict').checked,lpmin:+by('lpmin').value||80,showAll:by('showAll').checked});
   by('progress').textContent='相関計算 完了';
